# visual_2025

./: .gitignore
.devcontainer/: Dockerfile  build.bash  devcontainer.json  docker-compose.yml
.github/workflows/: docker_auto_build_push.yml
docker/: docker-compose.yml
src/change_laser/: CMakeLists.txt  package.xml
src/change_laser/src/: obstacle_extractor.cpp
src/location/: CMakeLists.txt
src/my_algorithm/: CMakeLists.txt  package.xml
src/my_algorithm/src/: decide.py  lidar_change.py  logic.py  nav_behave.py  pid.py  random_generate.py
src/my_perception/: CMakeLists.txt
src/my_perception/config/: Initialization_result.txt  ekf.yaml
src/my_perception/launch/: pointcloud_to_laserscan.launch.py
src/my_perception/scripts/: EFK.py  icp.py  icp_without_yaw.py  kalman_node.py
src/my_perception/src/: imu_transform.cpp
src/nav_plugin/costmap_ultra/: CMakeLists.txt  costmap_intensity.xml
src/nav_plugin/costmap_ultra/include/: simple_laser_layer.hpp
src/nav_plugin/costmap_ultra/include/costmap_intensity/: obstacle_layer.hpp
src/nav_plugin/costmap_ultra/include/costmap_ultra/: obstacle_layer.hpp
src/nav_plugin/costmap_ultra/plugins/: obstacle_layer.cpp  simple_laser_layer.cpp
src/pcl_handle/: CMakeLists.txt
src/python_pkg/: setup.py
src/python_pkg/python_pkg/: imu_analysis.py
src/rc_navigation/: README.md
src/rc_navigation/config/: amcl.yaml  bt_navigator.yaml  controller_server.yaml  costmaps.yaml  nav2_params.yaml  nav2_params_real.yaml  nav2_params_real_conser.yaml  nav_decide.yaml  nav_decide_real.yaml  nav_decide_sim.yaml  planner_server.yaml
src/rc_navigation/launch/: nav_bringup.launch.py  nav_decide.launch.py  nav_decide_sim.launch.py  navigation.launch.py  rc_nav.launch.py
src/rc_navigation/map/: 16_8_map.pbm  court_map.yaml  court_map_real.yaml
src/utils/: CMakeLists.txt  package.xml
src/utils/launch/: rosbag_play.launch.py
src/utils/src/: rosbag_listener.cpp  rosbag_player.cpp
